MessageEditor: beta version -> still buggy